# todo-app-phase-ii

./: .gitignore  README.md  RUNNING_FRONTEND.md  test_connection.py  validate_implementation.py
backend/: .env.example  .gitignore  NEON_SETUP.md  alembic.ini  debug_auth.py  pyproject.toml  requirements.txt  run_server.py  start.sh  tasks.md  test_agent_init.py  test_api_endpoint.py  test_backend_functionality.py  test_cors.py  test_cors_detailed.py  test_fix_verification.py  test_imports.py  test_jwt_auth.py  test_routes.py  test_task_creation.py  tmpclaude-b1aa-cwd  vercel.json  verification_summary.py  verification_summary.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_timezone_to_datetime_columns.py  003_add_conversation_and_message_tables.py
backend/history/adr/: 001-backend-framework-architecture.md  002-authentication-strategy.md  003-ai-service-integration.md  004-frontend-backend-integration.md  005-configuration-management.md  006-system-verification-and-testing.md
backend/specs/ai-todo-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md
backend/src/: config.py  main.py
backend/src/agents/: todo_agent.py
backend/src/api/: auth.py  chat.py  tasks.py
backend/src/db/: database.py  database_async.py  session.py
backend/src/mcp_tools/: __init__.py  task_tools.py
backend/src/middleware/: jwt_auth.py  logging.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/src/services/: auth.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_tasks.py
(+182 files in other folders)
